--- a/.github/workflows/appsec.yml
+++ b/.github/workflows/appsec.yml
@@ -91,13 +91,13 @@ jobs:
           env CGO_ENABLED=${{ matrix.cgo_enabled }} DD_APPSEC_ENABLED=${{ matrix.appsec_enabled }}
           ./gotestsum --junitfile $JUNIT_REPORT -- -v ${{ matrix.build_tags != '' && format('-tags="{0}"', matrix.build_tags) || ''}} $TO_TEST || true
 
-      - name: Upload the results to Datadog CI App
-        if: matrix.distribution != 'alpine' # datadog-ci CLI doesn't work on alpine
-        uses: ./.github/actions/dd-ci-upload
-        with:
-          dd-api-key: ${{ secrets.DD_CI_API_KEY }}
-          files: ${{ env.JUNIT_REPORT }}
-          tags: go:${{ matrix.go-version }},arch:${{ runner.arch }},os:${{ runner.os }},distribution:${{ runner.distribution }}
+#      - name: Upload the results to Datadog CI App
+#        if: matrix.distribution != 'alpine' # datadog-ci CLI doesn't work on alpine
+#        uses: ./.github/actions/dd-ci-upload
+#        with:
+#          dd-api-key: ${{ secrets.DD_CI_API_KEY }}
+#          files: ${{ env.JUNIT_REPORT }}
+#          tags: go:${{ matrix.go-version }},arch:${{ runner.arch }},os:${{ runner.os }},distribution:${{ runner.distribution }}
 
   linux-arm64:
     runs-on: ubuntu-latest
