Fix some more tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,9 +62,9 @@ jobs:
         name: goimports
         command: |
           go install golang.org/x/tools/cmd/goimports
-          if [ "$(~/go/bin/goimports -e -l -local gopkg.in/DataDog/dd-trace-go.v1 . | wc -l)" -gt 0 ]; then
-            echo "Run 'goimports -w -local gopkg.in/DataDog/dd-trace-go.v1 .' to format code."
-            ~/go/bin/goimports -d -local gopkg.in/DataDog/dd-trace-go.v1 .
+          if [ "$(~/go/bin/goimports -e -l -local github.com/zleague/dd-trace-go . | wc -l)" -gt 0 ]; then
+            echo "Run 'goimports -w -local github.com/zleague/dd-trace-go .' to format code."
+            ~/go/bin/goimports -d -local github.com/zleague/dd-trace-go .
             exit 1
           fi
 
